Edited for ability to deploy to deploy as maven repository